<resources>
    <string name="app_name">Enrollment Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="course_details">Course Details</string>
    <string name="optional_notes">Optional Notes</string>
    <string name="status">Status</string>
    <string name="notes">Notes</string>
    <string name="term_start_date">Term Start Date</string>
    <string-array name="status_array">
        <item>In Progress</item>
        <item>Plan to Take</item>
        <item>Dropped</item>
        <item>Completed</item>
    </string-array>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="terms">Terms</string>
    <string name="assessment">Assessment</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="save_term">Save Term</string>
    <string name="save_course">Save Course</string>
    <string name="term_title">Term Title</string>
    <string name="term_end_date">Term End Date</string>
    <string name="term_id">Term ID</string>
    <string name="title">Title</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="title_course_label">Title</string>
    <string name="term_label">Term</string>
    <string name="edit_course">edit course</string>
    <string name="delete_course">delete course</string>
    <string name="course_start_date">Start Date</string>
    <string name="course_end_date">End Date</string>
    <string name="course_status">Status</string>
    <string name="course_optional_notes">Optional Notes</string>
    <string name="course_id">course id</string>
    <string name="ass_id">ass.id</string>
    <string name="name">Name</string>
    <string name="acourse_title">Course Title</string>
    <string name="due_date">Due Date</string>
    <string name="assessment_due_date">Assessment Due Date</string>
    <string name="edit_assessment">edit assessment</string>
    <string name="delete_assement">delete assement</string>
    <string name="insert_name">insert name</string>
    <string name="insert_course_title">insert course title</string>
    <string name="name_assessment">name assessment</string>
    <string name="title_course">title course</string>
    <string name="course_title">course title</string>
    <string name="header">header</string>
    <string name="course_tracker">COURSE TRACKER</string>
    <string name="course_mentors">Course Mentors</string>
    <string name="mentor_name">mentor name</string>
    <string name="mentor">mentor</string>
    <string name="mentor_phone">mentor phone</string>
    <string name="mentor_email">mentor email</string>
    <string name="mentor_name_edit">Mentor Name</string>
    <string name="mentor_phone_edit">Mentor Phone</string>
    <string name="mentor_email_edit">Mentor Email</string>
    <string name="western_governor_university">WESTERN GOVERNOR UNIVERSITY</string>
    <string name="enrollment_manager">ENROLLMENT MANAGER</string>
    <string name="share_notes">share notes</string>
</resources>
