<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTermTitle"
            android:layout_width="136dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:text="@string/term_title" />

        <TextView
            android:id="@+id/textViewTermStartDate"
            android:layout_width="136dp"
            android:layout_height="35dp"
            android:layout_below="@+id/textViewTermTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/term_start_date" />

        <TextView
            android:id="@+id/textViewTermEndDate"
            android:layout_width="136dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="107dp"
            android:text="@string/term_end_date" />

        <TextView
            android:id="@+id/textViewTerm_id"
            android:layout_width="63dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="3dp"
            android:text="@string/term_id" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="108dp"
            android:text="@string/end" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="59dp"
            android:text="@string/start" />

        <ImageButton
            android:id="@+id/icon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_delete"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="9dp"
            android:contentDescription="@string/edit"
            app:srcCompat="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/icon_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTerm_id"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-56dp"
            android:layout_toStartOf="@+id/textViewTerm_id"
            android:contentDescription="@string/delete"
            app:srcCompat="@drawable/ic_delete" />

    </RelativeLayout>

</android.support.v7.widget.CardView>